--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>Luck of the Draw</title>
         <script src="phaser.min.js"></script>
-		<script src="helloworld.js"></script>
+        <script src="require.min.js"></script>
+        <script src="constants.js"></script>
+        <script src="gameObject.js"></script>
+        <script src="room.js"></script>
+		<script src="main.js"></script>
+
     </head>
     <body>
     </body>
