--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Luck of the Draw</title>
         <script src="phaser.min.js"></script>
         <script src="require.min.js"></script>
+        <script src="util.js"></script>
         <script src="constants.js"></script>
         <script src="gameObject.js"></script>
         <script src="room.js"></script>
