--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="phaser.min.js"></script>
         <script src="require.min.js"></script>
         <script src="util.js"></script>
+        <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
         <script src="gameObject.js"></script>
         <script src="room.js"></script>
