--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
         <script src="gameObject.js"></script>
+        <script src="enemy.js"></script>
         <script src="room.js"></script>
 		<script src="main.js"></script>
 
