Queuing up moves

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="util.js"></script>
         <script src="constants.js"></script>
         <script src="gameObject.js"></script>
+        <script src="playerCharacter.js"></script>
         <script src="room.js"></script>
 		<script src="main.js"></script>
 
