--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Luck of the Draw</title>
-        <script src="phaser.min.js"></script>
-        <script src="require.min.js"></script>
+        <script src="lib/phaser.min.js"></script>
+        <script src="lib/jquery-2.1.0.min.js"></script>
         <script src="util.js"></script>
         <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
