--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <script src="enemy.js"></script>
         <script src="roomFactory.js"></script>
         <script src="room.js"></script>
+        <script src="eventSequence.js"></script>
 		<script src="main.js"></script>
 
     </head>
     <body>
     </body>
-</html>
+</html> 
