Broke non-gameObject code in gameObject.js to its own file. Added missing clear function in eventSequence

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
         <script src="gameObject.js"></script>
+        <script src="wall.js"></script>
+        <script src="character.js"></script>
         <script src="playerCharacter.js"></script>
         <script src="enemy.js"></script>
         <script src="roomFactory.js"></script>
