--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="enemy.js"></script>
         <script src="roomFactory.js"></script>
         <script src="room.js"></script>
+        <script src="floor.js"></script>
         <script src="eventSequence.js"></script>
 		<script src="main.js"></script>
 
