--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="util.js"></script>
         <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
+        <script src="gun.js"></script>
         <script src="gameObject.js"></script>
         <script src="wall.js"></script>
         <script src="character.js"></script>
