--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         <script src="gun.js"></script>
         <script src="gameObject.js"></script>
         <script src="wall.js"></script>
+        <script src="door.js"></script>
         <script src="character.js"></script>
         <script src="playerCharacter.js"></script>
         <script src="enemy.js"></script>
         <script src="roomFactory.js"></script>
         <script src="room.js"></script>
         <script src="floor.js"></script>
+        <script src="map.js"></script>
         <script src="eventSequence.js"></script>
 		<script src="main.js"></script>
 
