--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="lib/phaser.min.js"></script>
         <script src="lib/jquery-2.1.0.min.js"></script>
         <script src="util.js"></script>
+        <script src="levels.js"></script>
         <script src="roomFactory.js"></script>
         <script src="constants.js"></script>
         <script src="gun.js"></script>
