Numbers on the grid!

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="floor.js"></script>
         <script src="map.js"></script>
         <script src="eventSequence.js"></script>
+        <script src="overlay.js"></script>
 		<script src="main.js"></script>
 
     </head>
