Seperated all action queuing and turn logic and UI into into its own class

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="map.js"></script>
         <script src="eventSequence.js"></script>
         <script src="overlay.js"></script>
+        <script src="turn.js"></script>
 		<script src="main.js"></script>
 
     </head>
