A whole bunch of little things

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script src="overlay.js"></script>
         <script src="titleOverlay.js"></script>
         <script src="turn.js"></script>
+        <script src="button.js"></script>
 		<script src="main.js"></script>
 
     </head>
